--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>
       Hello
     </title>
+    <back-ground color: blue>
   </head>
   <body>
-    Hello Internet
+    Hello Everyone
   </body>
 </html>
