--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>
-      Hello
-    </title>
-    <back-ground color: blue>
-  </head>
-  <body>
-    Hello Everyone
-  </body>
+<html lang="ën">
+    <head>
+        <title>Webpage Design </title>
+        <link rel="stylesheet" href="style.css" type="text/css">
+    </head>
+    <body>
+        <div class="main">
+            <div class="navbar">
+                <div class="icon">
+                    <h2 class="logo">SanGku</h2>
+                </div>
+                <div class="menu">
+                    <ul>
+                       
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">SERVICE</a></li>
+                        <li><a href="#">DESIGN</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </body>
+
 </html>
