--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li> Lab Assignment</li>
+                    <li><a href ="#Lab Assignment">Lab Assignment</li>
                 </ul>
             </div>
         </nav>
